<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.intentfilters.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtintent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtintent"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnDial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDial"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCall"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnWebsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnWebsearch"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMap"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNews"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnPlayStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPlayStore"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMusic"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnGithub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGithub"
        android:textSize="20sp"
        android:textAllCaps="false"/>


</LinearLayout>
